# cpp_yourself_homework

./: .clang-format  .gitignore  .gitmodules
homeworks/homework_2/fortune_teller/: fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game.cpp
homeworks/homework_4/no_strings_attached/: CMakeLists.txt
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  string_split.cpp  string_split.h  string_split_test.cpp  string_trim.cpp  string_trim.h  string_trim_test.cpp
homeworks/homework_5/pixelator/: log.txt
homeworks/homework_5/pixelator/examples/: CMakeLists.txt  pixelate.cpp  use_ftxui.cpp  use_stb_image.cpp
homeworks/homework_5/pixelator/pixelator/: CMakeLists.txt  drawer.cpp  drawer.hpp  drawer_test.cpp  image.cpp  image.hpp  image_test.cpp  pixelate_image.hpp  pixelate_image_test.cpp  stb_image_data_view.cpp  stb_image_data_view.hpp  stb_image_data_view_test.cpp  test_global_variables.hpp
homeworks/homework_5/pixelator/pixelator/test_data/: grumpy_pixelated.txt  grumpy_pixelated_20_fixed.txt  grumpy_pixelated_211_fixed.txt  test_grumpy_pixelated.txt
